Version 2.02.61 - 
===================================
  Make lvconvert --repair --use-policies exit with success when no action is needed.
  Add multiple snapshot lv 'lvconvert --merge @tag' support via process_each_lv().
  Fix inappropriate second resync when adding mimage to core-logged mirror.
  Exclude internal VG names and uuids in lists returned via liblvm interface.
  Add %ORIGIN support to lv{create,extend,reduce,resize} --extents option.
  Add copy constructor for metadata_area.
  Remove pointless versioned symlinks to dmeventd plugin libraries.
  Fix dmeventd snapshot plugin build dependency.
  Make clvmd -V return zero status.
  Fix lvconvert issue with cluster mirrors due to un'_safe' list processing
  Fix pvmove abort workaround to be cluster-aware when temporary mirror activation fails.
  Always query device by using uuid only and not name in clvmd.
  Add missing metadata reverts in pvmove error path.
  Unlock shared lock in clvmd if activation calls failed.
  Fix return code of info call for query by uuid.

Version 2.02.60 - 23rd January 2010
===================================
  Extend cmirrord man page.
  Sleep before first progress check if pvmove/lvconvert interval has prefix '+'.
  Default to checking progress before waiting in _wait_for_single_lv.
  Fix cmirror initscript (including syntax error).
  Eliminate avoidable ioctls for checking open_count in _add_new_lv_to_dtree.
  Disable memory debugging if dmeventd is configured. (Not thread-safe.)
  Fix first log message prefix in syslog for dmeventd plugins.
  Fix exported symbols names for dmeventd lvm2 wrapper plugin.
  Make failed locking initialisation messages more descriptive.

Version 2.02.59 - 21st January 2010
===================================
  Add libdevmapper-event-lvm2.so to serialise dmeventd plugin liblvm2cmd use.
  Cleanup memory initialization and freeing in pv_read() and pv_create().
  Clear pointer and counters after their release in _fin_commands().